Add basic configuration.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+spring.datasource.url=jdbc:postgresql://localhost:5432/bcvsaver
+spring.jpa.properties.hibernate.default_schema=bcvsaver
+spring.data.rest.base-path=api
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+spring.datasource.driverClassName=org.postgresql.Driver
