--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,7 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.datasource.driverClassName=org.postgresql.Driver
+spring.jpa.properties.hibernate.format_sql=true
+spring.main.allow-bean-definition-overriding=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql=TRACE
