--- a/build.gradle
+++ b/build.gradle
@@ -33,4 +33,9 @@ dependencies {
     compile group: 'org.glassfish.jaxb', name: 'jaxb-runtime', version: '2.3.2'
 // https://mvnrepository.com/artifact/org.javassist/javassist
     compile group: 'org.javassist', name: 'javassist', version: '3.24.1-GA'
+    // https://mvnrepository.com/artifact/org.spockframework/spock-core
+    testCompile group: 'org.spockframework', name: 'spock-core', version: '1.3-groovy-2.5'
+    // https://mvnrepository.com/artifact/org.codehaus.groovy/groovy-test
+    testCompile group: 'org.codehaus.groovy', name: 'groovy-test', version: '2.5.6'
+
 }
