Add unit and integrations tests with random data.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/bcvsaver
-spring.jpa.properties.hibernate.default_schema=bcvsaver
+spring.datasource.url=jdbc:postgresql://localhost:5432/bcvsaver?currentSchema=bcvsaver
+spring.datasource.platform=postgres
+#spring.jpa.properties.hibernate.default_schema=bcvsaver
 spring.data.rest.base-path=api
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.username=postgres
