--- a/build.gradle
+++ b/build.gradle
@@ -22,14 +22,19 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation "org.codehaus.groovy:groovy-all:2.5.6"
     compileOnly 'org.projectlombok:lombok:1.18.6'
     annotationProcessor 'org.projectlombok:lombok:1.18.6'
     runtimeOnly 'org.postgresql:postgresql'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation "org.spockframework:spock-core:1.3-groovy-2.5"
+    testImplementation group: 'org.spockframework', name: 'spock-spring', version: '1.3-groovy-2.5'
+    testImplementation 'com.h2database:h2'
     compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'
     compile group: 'org.glassfish.jaxb', name: 'jaxb-runtime', version: '2.3.2'
     compile group: 'org.javassist', name: 'javassist', version: '3.24.1-GA'
     testCompile group: 'org.spockframework', name: 'spock-core', version: '1.3-groovy-2.5'
     testCompile group: 'org.codehaus.groovy', name: 'groovy-test', version: '2.5.6'
     testCompile group: 'uk.co.jemos.podam', name: 'podam', version: '7.2.2.RELEASE'
+
 }
